[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "compares two configs and makes changes"
authors = ["Abra19 <evabrarova@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "gendiff" },
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/Abra19/python-project-50"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
